--- a/Homework1.ipynb
+++ b/Homework1.ipynb
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -74,7 +74,7 @@
         },
         "outputId": "8a85375d-1f68-492e-c2ea-517071e4d9ae"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -105,7 +105,7 @@
         },
         "outputId": "b7a0768b-b36d-4b3d-8064-7addb009f8c1"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -120,7 +120,7 @@
       "cell_type": "code",
       "source": [
         "#Q4- Using for loop, print 1,2,3,4,5\n",
-        "for k in range(0,6):\n",
+        "for k in range(1,6):\n",
         "  print(k)"
       ],
       "metadata": {
@@ -128,15 +128,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "89b39c3d-2e43-416a-ac3e-e773ff307588"
+        "outputId": "a6902de7-3bd7-4274-ab5a-3c84876b1863"
       },
-      "execution_count": 13,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0\n",
             "1\n",
             "2\n",
             "3\n",
@@ -162,7 +161,7 @@
         },
         "outputId": "ad063f76-0c16-44dc-e4b1-5248069c745b"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -182,14 +181,33 @@
       "source": [
         "#Q6- Using for loop, print 10,6,4,2,0\n",
         "#Hint Print if number is not equal to 8.\n",
-        "for n in range(10,1,2):\n",
-        "  print(n)"
+        "for j in range(10,-1,-2):\n",
+        "  if (j==8):\n",
+        "    continue\n",
+        "  else:\n",
+        "    print(j)"
       ],
       "metadata": {
-        "id": "cXTTDS49xSoi"
+        "id": "cXTTDS49xSoi",
+        "outputId": "b0ca8079-ee9c-4755-de44-bb75add19424",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 18,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "6\n",
+            "4\n",
+            "2\n",
+            "0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -208,7 +226,7 @@
         },
         "outputId": "3b5b7f16-5ff7-4f31-b90b-0c15ba9e6ecd"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -237,7 +255,7 @@
         },
         "outputId": "af1553d6-d157-40dc-b071-7909ab981ff1"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -270,7 +288,7 @@
         },
         "outputId": "295775ef-7b91-4368-ca25-7f6b45ca7c26"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -285,26 +303,26 @@
       "cell_type": "code",
       "source": [
         "#Q10-Generate 10 numbers between 0 and 1 and add into list. Print first three elements of that list. \n",
-        "list(range(0,1))"
+        "t = []\n",
+        "for n in range(0,11):\n",
+        "  t.append(n)\n",
+        "print(t[0:3])"
       ],
       "metadata": {
         "id": "hmtvJdCL02qx",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "07dc4c3f-3d5d-445a-9894-54912af093e0"
+        "outputId": "b1ff5037-81a1-4e09-862c-944758ee4548"
       },
-      "execution_count": 46,
+      "execution_count": 6,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[0]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 46
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0, 1, 2]\n"
+          ]
         }
       ]
     },
@@ -320,12 +338,12 @@
       ],
       "metadata": {
         "id": "5O6Y2CujcAAs",
-        "outputId": "11d34a57-0992-4f49-8040-cc9a9695a220",
+        "outputId": "f11da7ae-0b84-4e96-99db-84b348198582",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 48,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
