--- a/Homework1.ipynb
+++ b/Homework1.ipynb
@@ -29,13 +29,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "jrVeHsm1rpdT",
-        "outputId": "1bd7cd71-0acf-4fe1-fe28-5f1041f801e8"
+        "outputId": "3d3709f1-7953-4436-f214-c40a52a5b7a8"
       },
       "outputs": [
         {
@@ -72,9 +72,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8a85375d-1f68-492e-c2ea-517071e4d9ae"
+        "outputId": "15ded995-a1e0-47d2-b8a8-4fa1fc3883d8"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -181,20 +181,20 @@
       "source": [
         "#Q6- Using for loop, print 10,6,4,2,0\n",
         "#Hint Print if number is not equal to 8.\n",
-        "for j in range(10,-1,-2):\n",
-        "  if (j==8):\n",
+        "for m in range(10,-1,-2):\n",
+        "  if (m==8):\n",
         "    continue\n",
         "  else:\n",
-        "    print(j)"
+        "    print(m)"
       ],
       "metadata": {
         "id": "cXTTDS49xSoi",
-        "outputId": "b0ca8079-ee9c-4755-de44-bb75add19424",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3a1bf9a7-8a26-43b2-9ee8-06a9749b16f8"
       },
-      "execution_count": 2,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
