--- a/Homework1.ipynb
+++ b/Homework1.ipynb
@@ -244,28 +244,33 @@
       "cell_type": "code",
       "source": [
         "#Q8-Write a class named arithmetic with method for calculating addition, substraction, multiplication and division of two numbers.\n",
-        "def calculator(a,b):\n",
-        "  return a+b, a-b, a*b, a/b \n",
-        "calculator(10,2)"
+        "class arithmetic:\n",
+        "  def addition(a,b):\n",
+        "    return a+b\n",
+        "  def multiplication(a,b):\n",
+        "    return a*b\n",
+        "  def division(a,b):\n",
+        "    return a/b\n",
+        "  def substraction(a,b):\n",
+        "    return a-b\n",
+        "\n",
+        "print(arithmetic.division(20,5))"
       ],
       "metadata": {
         "id": "YcyFzE3fzC7_",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "af1553d6-d157-40dc-b071-7909ab981ff1"
+        "outputId": "72300e06-b1ea-4e4f-f231-8db16e1f4b48"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(12, 8, 20, 5.0)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 24
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4.0\n"
+          ]
         }
       ]
     },
